# cideldill

./: .eslintrc.json  .gitignore  .stylelintrc.json  AGENTS.md  Dockerfile  P0_IMPLEMENTATION_SUMMARY.md  README.md  calculator_example.db  calculator_example.html  coverage.json  demo_web_ui.py  doctor.py  install_deps.sh  manifest.json  pyproject.toml  source_1.html  source_2.html  source_3.html  source_4.html  source_5.html  source_6.html
.github/: copilot-instructions.md
.github/workflows/: build-report.yml
cideldill_shared/: __init__.py  serialization_common.py
client/: pyproject.toml  usage.md
client/docs/: usage.md
client/src/cideldill_client/: __init__.py  custom_picklers.py  deadlock_watchdog.py  debug_client.py  debug_proxy.py  exceptions.py  function_registry.py  logger.py  port_discovery.py  serialization.py  serialization_common.py  server_failure.py  with_debug.py
docs/: breakpoints_web_ui.md  mcp_integration.md  usage.md  with_debug_api.md
done/: API_for_apps_being_inspected.md  Dynamic_Port_Discovery.md  breakpoint_repl.md  debug_call.md  enhanced_pickling.md  further_enhanced_serialization.md  serialization.md  use_cases.md
examples/: README.md  __init__.py  demo_calculator_storage.py  demo_call_tracking.py  interactive_breakpoint_demo.py  level0_calculator.py  p0_features_demo.py  sequence_demo.py  unpicklable_objects.py  with_debug_async.py  with_debug_basic.py  with_debug_builtins.py
run/mac/: all_tests  bootstrap_env  breakpoint_server  calculator_example  sequence_demo_breakpoints
scripts/: build.sh  check_duplicate_files.py  generate_report.py
server/: pyproject.toml
specs/: logger.spec  step_impl.py
src/cideldill/: __init__.py  __main__.py  breakpoint_manager.py  breakpoint_server.py  cas_store.py  cid_store.py  debug_client.py  debug_info.py  debug_proxy.py  decomposition.py  exceptions.py  function_registry.py  html_generator.py  inspector.py  interceptor.py  logger.py  serialization.py  source_viewer.py  with_debug.py
static/css/: style.css
static/js/: app.js
tests/: conftest.py
tests/examples/: test_level0_calculator.py  test_sequence_demo.py
tests/hypothesis/: __init__.py  test_logger_properties.py
tests/integration/: README.md  test_breakpoint_functionality.py  test_breakpoint_server_db.py  test_breakpoint_workflow.py  test_browser_integration.py  test_browser_repl_integration.py  test_browser_sync_integration.py  test_calculator_integration.py  test_debug_proxy_placeholder_payload.py  test_mcp_server_integration.py  test_port_discovery_integration.py  test_sequence_demo_breakpoints.py  test_sequence_demo_breakpoints_port.py  test_serialization_graceful_degradation.py
tests/scripts/: __init__.py  test_calculator_example_script.py  test_sequence_demo_breakpoints.py
tests/unit/: test_breakpoint_manager.py  test_breakpoint_server.py  test_breakpoint_server_main_db.py  test_breakpoint_server_port_discovery.py  test_browser_cors.py  test_browser_process_identity.py  test_browser_serialization_format.py  test_cas_store.py  test_cas_store_filtering.py  test_cid_store.py  test_cid_validation.py  test_client_port_discovery.py  test_custom_picklers.py  test_custom_picklers_edge_cases.py  test_debug_call.py  test_debug_client.py  test_debug_client_graceful_degradation.py  test_debug_client_js_core.py  test_debug_client_js_edge_cases.py  test_debug_client_js_endpoint.py  (+37 more)
todo/: API_for_apps_being_inspected.md  Dynamic_Port_Discovery.md  MCP_client.md  MCP_server.md  breakpoint_repl.md  browser_support.md  cideldill-bug-report.md  cideldill-exception-reporting-bug.md  cleanup.md  deadlock_bug_report.md  debug_call.md  debug_call_validation.md  examples_plan.md  further_enhanced_serialization.md  java_support.md  master_plan.md  serialization.md  use_cases.md
(+23 files in other folders)
